@@ -1,5 +1,7 @@
 package com.example.practice_1.services;
 
+import com.example.practice_1.exceptions.BookAlreadyExistsException;
+import com.example.practice_1.exceptions.BookNotFoundException;
 import com.example.practice_1.models.Book;
 import com.example.practice_1.models.Course;
 import com.example.practice_1.models.Registration;
@@ -9,65 +11,69 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
 public class BookService {
     private final BookRepo bookRepo;
 
-    public Book createBook(Book book) throws RuntimeException {
+    public void createBook(Book book) {
         if (bookRepo.existsByNameAndAuthor(book.getName(), book.getAuthor())) {
-            throw new RuntimeException("Book with such name and author already exists");
+            throw new BookAlreadyExistsException("Book with such name and author already exists");
         }
-        return bookRepo.save(book);
+        bookRepo.save(book);
     }
 
     public void createRandomBooks(int n) {
-        for (int i = 0; i < n; ) {
-            try {
-                createBook(Book.createRandomBook());
-                i++;
-            } catch (Exception ignored) {
-            }
-        }
+        IntStream.range(0, n)
+                .filter(i -> {
+                    try {
+                        createBook(Book.createRandomBook());
+                        return true;
+                    } catch (Exception ignored) {
+                        return false;
+                    }
+                })
+                .forEach(i -> {
+                });
     }
 
-    public List<Book> getAllBooks() throws RuntimeException {
+    public List<Book> getAllBooks() {
         List<Book> bookList = bookRepo.findAll();
         if (bookList.isEmpty()) {
-            throw new RuntimeException("There is no book");
+            throw new BookNotFoundException("There is no book");
         }
         return bookList;
     }
 
-    public List<Book> getBooksByName(String name) throws RuntimeException {
+    public List<Book> getBooksByName(String name) {
         List<Book> bookList = bookRepo.findBooksByName(name);
         if (bookList.isEmpty()) {
-            throw new RuntimeException("There is no book with such name");
+            throw new BookNotFoundException("There is no book with such name");
         }
         return bookList;
     }
 
-    public List<Book> getBooksByAuthor(String author) throws RuntimeException {
+    public List<Book> getBooksByAuthor(String author) {
         List<Book> bookList = bookRepo.findBooksByAuthor(author);
         if (bookList.isEmpty()) {
-            throw new RuntimeException("There is no book with such author");
+            throw new BookNotFoundException("There is no book with such author");
         }
         return bookList;
     }
 
-    public Book getBookByNameAndAuthor(String name, String author) throws RuntimeException {
+    public Book getBookByNameAndAuthor(String name, String author) {
         return bookRepo.findBookByNameAndAuthor(name, author)
-                .orElseThrow(() -> new RuntimeException("There is no book with such name and author"));
+                .orElseThrow(() -> new BookNotFoundException("There is no book with such name and author"));
     }
 
     public List<Book> getBooksByStudent(Student student) {
         List<Course> courses = student.getRegistrations().stream()
                 .map(Registration::getCourse)
-                .collect(Collectors.toList());
+                .toList();
         if (courses.isEmpty()) {
-            throw new RuntimeException("The student does not have any book");
+            throw new BookNotFoundException("The student does not have any book");
         }
         return bookRepo.findBooksByCourseIn(courses);
     }
@@ -75,10 +81,8 @@ public class BookService {
     public List<Book> getBooksByCourse(Course course) {
         List<Book> booksByCourse = bookRepo.findBooksByCourse(course);
         if (booksByCourse.isEmpty()) {
-            throw new RuntimeException("There is no book in this course");
+            throw new BookNotFoundException("There is no book in this course");
         }
         return booksByCourse;
     }
-
-
 }
